-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 15
-
Component/s: hotspot
-
b11
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246596 | 13.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
| JDK-8241215 | 11.0.8 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
When building with gcc7 on linux x86_64, and trying out different optimization options, I run into this error when
optimizing for space (-Os) :
/open_jdk/jdk_5/jdk/src/jdk.hotspot.agent/linux/native/libsaproc/libproc_impl.c: In function 'delete_thread_info':
/open_jdk/jdk_5/jdk/src/jdk.hotspot.agent/linux/native/libsaproc/libproc_impl.c:285:26: error: 'previous_thr' may be used uninitialized in this function [-Werror=maybe-uninitialized]
previous_thr->next = current_thr->next;
~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
We should probably better initialize previous_thr to avoid this warning.
optimizing for space (-Os) :
/open_jdk/jdk_5/jdk/src/jdk.hotspot.agent/linux/native/libsaproc/libproc_impl.c: In function 'delete_thread_info':
/open_jdk/jdk_5/jdk/src/jdk.hotspot.agent/linux/native/libsaproc/libproc_impl.c:285:26: error: 'previous_thr' may be used uninitialized in this function [-Werror=maybe-uninitialized]
previous_thr->next = current_thr->next;
~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
We should probably better initialize previous_thr to avoid this warning.
- backported by
-
JDK-8241215 libproc_impl.c previous_thr may be used uninitialized warning
-
- Resolved
-
-
JDK-8246596 libproc_impl.c previous_thr may be used uninitialized warning
-
- Resolved
-