8239224: libproc_impl.c previous_thr may be used uninitialized warning

Reviewed-by: clanger, dholmes